# telegram-2048-bot

./: .env-example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  make_volumes.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 5f9d308c4ba2_init.py
bot/: __main__.py  config_reader.py  game.py  utils.py
bot/db/: __init__.py  models.py  utils.py
bot/handlers/: game.py  stats.py
bot/keyboards/: __init__.py  game.py
bot/middlewares/: __init__.py  db_session.py  repo.py  requests_logging.py  throttling.py
bot/services/: repository.py
bot/services/repository/: __init__.py  base_repository.py  game_repository.py  repository.py
tests/: test_game.py  test_utils.py
