[tool.poetry]
name = "telegram-2048-bot"
version = "0.1.0"
description = ""
authors = ["darksidecat <bitalik371@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = {version = "^3.0.0-alpha.17", allow-prereleases = true}
SQLAlchemy = "^1.4.25"
alembic = "^1.7.3"
aioredis = "^2.0.0"
asyncpg = "^0.24.0"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.9b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
